Cleanup and Updated Documentation